# cmake-json-interface

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
cmake/: jsoncpp_fetchcontent.cmake  nlohmann_fetchcontent.cmake  nlohmann_test.cmake  simd_fetchcontent.cmake
content/: pokedex.json
program/: CMakeLists.txt
program/src/: main.cpp
